gitops/platform-apps/nextcloud/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-well-known-redirect
  namespace: nextcloud
spec:
  redirectRegex:
    regex: ^https?://nextcloud\.bierineenweek\.nl/.well-known/(carddav|caldav)$
    replacement: https://nextcloud.bierineenweek.nl/remote.php/dav
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-well-known-webfinger
  namespace: nextcloud
spec:
  replacePathRegex:
    regex: ^/\.well-known/(webfinger|nodeinfo)$
    replacement: /index.php/.well-known/$1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-well-known-host-meta
  namespace: nextcloud
spec:
  replacePathRegex:
    regex: ^/\.well-known/host-meta$
    replacement: /public.php?service=host-meta
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-well-known-host-meta-json
  namespace: nextcloud
spec:
  replacePathRegex:
    regex: ^/\.well-known/host-meta\.json$
    replacement: /public.php?service=host-meta-json
