gitops/platform-apps/nextcloud/coturn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-coturn
  namespace: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud-coturn
  ports:
    - name: turns
      port: 443
      targetPort: 443
    - name: turn-tcp
      port: 3478
      targetPort: 3478
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
