gitops/platform-apps/nextcloud/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nats
  namespace: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud-nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
