gitops/platform-apps/nextcloud/collabora-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud-collabora.__ZONE_NAME__`)
      services:
        - name: nextcloud-collabora
          port: 9980
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-netbird
  namespace: nextcloud
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`nextcloud-collabora.__ZONE_NAME__`)
      services:
        - name: nextcloud-collabora
          port: 9980
