gitops/platform-apps/nextcloud/eurooffice-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eurooffice
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud-eurooffice.__ZONE_NAME__`)
      middlewares:
        - name: eurooffice-forwarded-headers
      services:
        - name: nextcloud-eurooffice
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eurooffice-netbird
  namespace: nextcloud
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`nextcloud-eurooffice.__ZONE_NAME__`)
      middlewares:
        - name: eurooffice-forwarded-headers
      services:
        - name: nextcloud-eurooffice
          port: 80
