gitops/platform-apps/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.__ZONE_NAME__`)
      middlewares:
        - name: nextcloud-well-known-redirect
        - name: nextcloud-well-known-webfinger
        - name: nextcloud-well-known-host-meta
        - name: nextcloud-well-known-host-meta-json
      services:
        - kind: Service
          name: nextcloud
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-wiredoor
  namespace: nextcloud
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`nextcloud.__ZONE_NAME__`)
      middlewares:
        - name: nextcloud-well-known-redirect
        - name: nextcloud-well-known-webfinger
        - name: nextcloud-well-known-host-meta
        - name: nextcloud-well-known-host-meta-json
      services:
        - kind: Service
          name: nextcloud
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-tailscale
  namespace: nextcloud
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`nextcloud.__ZONE_NAME__`)
      middlewares:
        - name: nextcloud-well-known-redirect
        - name: nextcloud-well-known-webfinger
        - name: nextcloud-well-known-host-meta
        - name: nextcloud-well-known-host-meta-json
      services:
        - kind: Service
          name: nextcloud
          port: 8080
  tls: {}
