gitops/platform-apps/nextcloud/recording-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recording
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`recording.__ZONE_NAME__`)
      services:
        - kind: Service
          name: nextcloud-recording
          port: 1234
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recording-netbird
  namespace: nextcloud
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`recording.__ZONE_NAME__`)
      services:
        - kind: Service
          name: nextcloud-recording
          port: 1234
