gitops/platform-apps/nextcloud/signaling-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signaling
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`signaling.__ZONE_NAME__`)
      services:
        - kind: Service
          name: nextcloud-signaling
          port: 8080
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signaling-netbird
  namespace: nextcloud
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`signaling.__ZONE_NAME__`)
      services:
        - kind: Service
          name: nextcloud-signaling
          port: 8080
